Various changes, implemented the init function, created buddy .* , changed size of some variables because of various overflows

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "makefile.extensionOutputFolder": "./.vscode",
     "files.associations": {
-        "buddy.h": "c"
+        "buddy.h": "c",
+        "buddyallocator.h": "c",
+        "stdio.h": "c"
     },
     "makefile.launchConfigurations": [
         {
