Corrected error in bitmap and added both bitmap tree and Buddy item structs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,8 @@
     "files.associations": {
         "buddy.h": "c",
         "buddyallocator.h": "c",
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "stdint.h": "c"
     },
     "makefile.launchConfigurations": [
         {
