A couple of quality of life changes and "unexpected behaviours" corrected. Need to look into an issue with bitmap test (some times segfaults for some reason)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,8 @@
         "buddy.h": "c",
         "buddyallocator.h": "c",
         "stdio.h": "c",
-        "stdint.h": "c"
+        "stdint.h": "c",
+        "bitmap.h": "c"
     },
     "makefile.launchConfigurations": [
         {
