Corrected a bug for wich the bitmap was overwritten when initializing the pool allocator and started to shift the init function from bitmap_init to bitmaptree_init

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,8 @@
         "buddyallocator.h": "c",
         "stdio.h": "c",
         "stdint.h": "c",
-        "bitmap.h": "c"
+        "bitmap.h": "c",
+        "complex": "c"
     },
     "makefile.launchConfigurations": [
         {
