Changes to how the allocator interacts with the tree [TODO, rec func that sets the children]

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,5 +23,6 @@
             "binaryPath": "home/liam/Documents/buddy_allocator_bitmap/OUT/Bins/Bud_test",
             "binaryArgs": []
         }
-    ]
+    ],
+    "C_Cpp.default.configurationProvider": "ms-vscode.makefile-tools"
 }
